<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2025 shift7 GmbH. All rights reserved.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cloud.katta</groupId>
    <artifactId>katta-clientlib</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>

    <modules>
        <module>hub</module>
    </modules>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <cyberduck.version>9.1.3-SNAPSHOT</cyberduck.version>
        <testcontainers.version>1.20.4</testcontainers.version>
    </properties>

    <repositories>
        <repository>
            <id>maven.cyberduck.io-release</id>
            <url>https://s3-eu-west-1.amazonaws.com/repo.maven.cyberduck.io/releases</url>
            <layout>default</layout>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>maven.cyberduck.io-snapshot</id>
            <url>https://s3-eu-west-1.amazonaws.com/repo.maven.cyberduck.io/snapshots/</url>
            <layout>default</layout>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ch.cyberduck</groupId>
                <artifactId>binding</artifactId>
                <version>${cyberduck.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.cyberduck</groupId>
                <artifactId>nio</artifactId>
                <version>${cyberduck.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.cyberduck</groupId>
                <artifactId>oauth</artifactId>
                <version>${cyberduck.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.cyberduck</groupId>
                <artifactId>jersey</artifactId>
                <version>${cyberduck.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.cyberduck</groupId>
                <artifactId>s3</artifactId>
                <version>${cyberduck.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.cyberduck</groupId>
                <artifactId>cryptomator</artifactId>
                <version>${cyberduck.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.cyberduck</groupId>
                <artifactId>core</artifactId>
                <type>test-jar</type>
                <scope>test</scope>
                <version>${cyberduck.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.cyberduck</groupId>
                <artifactId>test</artifactId>
                <type>pom</type>
                <version>${cyberduck.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>${testcontainers.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>